<resources>
    <string name="app_name">MovieAndTvShowCatalogue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="title_movie_tvshow">List Movie And Tv Show</string>
    <string name="title">title</string>
    <string name="genre">Genre :</string>
    <string name="overview">Overview</string>
    <string name="more_information">More Information</string>
    <string name="runtime">Runtime :</string>
    <string name="budget">Budget :</string>
    <string name="revenue">Revenue :</string>
    <string name="status">Status :</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="detail_tvshow">Detail Tv Show</string>
    <string-array name="data_title">
        <item>Venom (2018)</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Bumblebee</item>
        <item>Bohemian Rhapsody</item>
        <item>Aquaman</item>
        <item>Mortal Engines</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>Green Book</item>
        <item>Black Panther</item>
        <item>Ralph Breaks the Internet</item>

    </string-array>
    <string-array name="data_description">
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson \"Kingpin\" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause—elevating wizards above all non-magical beings. The only one capable of putting a stop to him is the wizard he once called his closest friend, Albus Dumbledore. However, Dumbledore will need to seek help from the wizard who had thwarted Grindelwald once before, his former student Newt Scamander, who agrees to help, unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world.</item>
        <item>Tony Lip, a bouncer in 1962, is hired to drive pianist Don Shirley on a tour through the Deep South in the days when African Americans, forced to find alternate accommodations and services due to segregation laws below the Mason-Dixon Line, relied on a guide called The Negro Motorist Green Book.</item>
        <item>King T\'Challa returns home from America to the reclusive, technologically advanced African nation of Wakanda to serve as his country\'s new leader. However, T\'Challa soon finds that he is challenged for the throne by factions within his own country as well as without. Using powers reserved to Wakandan kings, T\'Challa assumes the Black Panther mantel to join with girlfriend Nakia, the queen-mother, his princess-kid sister, members of the Dora Milaje (the Wakandan \'special forces\') and an American secret agent, to prevent Wakanda from being dragged into a world war.</item>
        <item>Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the World Wide Web in search of a replacement part to save Vanellope\'s video game, \"Sugar Rush.\" In way over their heads, Ralph and Vanellope rely on the citizens of the internet -- the netizens -- to help navigate their way, including an entrepreneur named Yesss, who is the head algorithm and the heart and soul of trend-making site BuzzzTube.</item>
    </string-array>
    <string-array name="data_date">
        <item>October 5, 2018</item>
        <item>December 14, 2018</item>
        <item>December 21, 2018</item>
        <item>November 2, 2018</item>
        <item>December 21, 2018</item>
        <item>December 14, 2018</item>
        <item>November 16, 2018</item>
        <item>November 16, 2018</item>
        <item>February 16, 2018</item>
        <item>November 21, 2018</item>
    </string-array>
    <string-array name="data_budget">
        <item>$116,000,000.00</item>
        <item>$90,000,000.00</item>
        <item>$135,000,000.00</item>
        <item>$52,000,000.00</item>
        <item>$160,000,000.00</item>
        <item>$100,000,000.00</item>
        <item>$200,000,000.00</item>
        <item>$23,000,000.00</item>
        <item>$200,000,000.00</item>
        <item>$175,000,000.00</item>
    </string-array>
    <string-array name="data_revenue">
        <item>$855,013,954.00</item>
        <item>$375,450,417.00</item>
        <item>$465,895,025.00</item>
        <item>$835,137,710.00</item>
        <item>$1,143,689,193.00</item>
        <item>$104,236,467.00</item>
        <item>$653,355,901.00</item>
        <item>$319,700,000.00</item>
        <item>$1,346,739,107.00</item>
        <item>$529,221,154.00</item>
    </string-array>
    <string-array name="data_runtime">
        <item>1h 52m</item>
        <item>1h 57m</item>
        <item>1h 54m</item>
        <item>2h 15m</item>
        <item>2h 24m</item>
        <item>2h 9m</item>
        <item>2h 14m</item>
        <item>2h 10m</item>
        <item>2h 14m</item>
        <item>1h 52m</item>
    </string-array>
    <string-array name="data_genre">
        <item>Science Fiction, Action</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Drama, Music</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Adventure, Fantasy</item>
        <item>Adventure</item>
        <item>Drama, Comedy</item>
        <item>Action, Adventure, Fantasy, Science Fiction</item>
        <item>Family, Animation, Comedy, Adventure</item>
    </string-array>
    <string-array name="data_tvshow_title">
        <item>Final Space</item>
        <item>Krypton</item>
        <item>Legacies</item>
        <item>Goblin Slayer</item>
        <item>The Resident</item>
        <item>Titans</item>
        <item>Violet Evergarden</item>
        <item>Siren</item>
        <item>Baki</item>
        <item>The Rain</item>
    </string-array>
    <string-array name="data_tvshow_date">
        <item>February 26, 2018</item>
        <item>March 21, 2018</item>
        <item>October 25, 2018</item>
        <item>October 7, 2018</item>
        <item>January 21, 2018</item>
        <item>October 12, 2018</item>
        <item>January 11, 2018</item>
        <item>March 29, 2018</item>
        <item>June 26, 2018</item>
        <item>May 4, 2018</item>
    </string-array>
    <string-array name="data_tvshow_description">
        <item>An astronaut named Gary and his planet-destroying sidekick Mooncake embark on serialized journeys through space in order to unlock the mystery of \“Final Space,\” the last point in the universe, if it actually does exist.</item>
        <item>Set two generations before the destruction of the legendary Man of Steel\’s home planet, Krypton follows Superman\’s grandfather — whose House of El was ostracized and shamed — as he fights to redeem his family\’s honor and save his beloved world from chaos.</item>
        <item>In a place where young witches, vampires, and werewolves are nurtured to be their best selves in spite of their worst impulses, Klaus Mikaelson\’s daughter, 17-year-old Hope Mikaelson, Alaric Saltzman\’s twins, Lizzie and Josie Saltzman, among others, come of age into heroes and villains at The Salvatore School for the Young and Gifted.</item>
        <item>A young priestess has formed her first adventuring party, but almost immediately they find themselves in distress. It\'s the Goblin Slayer who comes to their rescue—a man who\'s dedicated his life to the extermination of all goblins, by any means necessary. And when rumors of his feats begin to circulate, there\'s no telling who might come calling next...</item>
        <item>A tough, brilliant senior resident guides an idealistic young doctor through his first day, pulling back the curtain on what really happens, both good and bad, in modern-day medicine.</item>
        <item>A team of young superheroes led by Nightwing (formerly Batman\'s first Robin) form to combat evil and other perils.</item>
        <item>The war is over, and Violet Evergarden needs a job. Scarred and emotionless, she takes a job as a letter writer to understand herself and her past.</item>
        <item>The coastal town of Bristol Cove is known for its legend of once being home to mermaids. When the arrival of a mysterious girl proves this folklore all too true, the battle between man and sea takes a very vicious turn as these predatory beings return to reclaim their right to the ocean.</item>
        <item>The protagonist, Baki Hanma, trains with an intense focus to become strong enough to surpass his father, Yujiro Hanma, the strongest fighter in the world. Five of the world\'s most violent and brutal death row inmates are gathering to face Baki. Their objective is to taste defeat -- their unmatched strength and skill have led them to grow bored of life itself, and they now seek out Baki in the hopes that he can overwhelm and utterly crush them. In this crisis, other underground martial art warriors gather to fight by Baki\'s side: Kaoru Hanayama, Gouki Shibukawa, Retsu Kaioh, and Doppo Orochi. An epic showdown between violent death row inmates and Baki and his friends begins.</item>
        <item>After a brutal virus wipes out most of the population, two young siblings embark on a perilous search for safety. A Scandinavian thriller series.</item>
    </string-array>
    <string-array name="data_tvshow_runtime">
        <item>22m</item>
        <item>45m</item>
        <item>43m</item>
        <item>24m</item>
        <item>42m</item>
        <item>43m</item>
        <item>25m</item>
        <item>42m</item>
        <item>24m</item>
        <item>45m</item>
    </string-array>
</resources>